--- a/css/WallberryTheme.css
+++ b/css/WallberryTheme.css
@@ -10,6 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.WallberryTheme .background {
+  
+}
+
 .light {
   font-family: "Rubik", sans-serif;
   font-weight: 300; }
