Moving background fades into WallberryTheme
Moves css background fades out of WB-clock and WB-weather and into WallberryTheme as an option.

--- a/WB-clock/WB-clock.css
+++ b/WB-clock/WB-clock.css
@@ -4,7 +4,7 @@
   top: -60px;
   left: -60px;
   padding: 60px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(130, 130, 130, 0)); }
+}
 
 .wbclock {
   position: relative;
