WB-weather: fixes #31 CSS bug
WB-weather elements now stay properly quarantined in their divs the way they should.

--- a/WB-weather/css/classic-wallberry.css
+++ b/WB-weather/css/classic-wallberry.css
@@ -1,3 +1,15 @@
+.WB-weather .module-content .weather:before,
+.WB-weather .module-content .weather:after {
+  content: "";
+  display: table;
+}
+.WB-weather .module-content .weather:after {
+  clear: both;
+}
+.WB-weather .module-content .weather {
+  clear: both;
+}
+
 .weather__current {
   text-align: left;
   float: left;
